# assistant

./: .gitignore  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  Dockerfile  IMPLEMENTATION_REPORT.md  LICENSE  MODERN_SHELL_GUIDE.md  MODERN_SHELL_IMPLEMENTATION_SUMMARY.md  MODERN_UI_GUIDE.md  PERFORMANCE_OPTIMIZATION_REPORT.md  PROJECT_STRUCTURE_REPORT.md  QUICKSTART.md  README.md  README_old.md  README_old2.md  TEST_OPTIMIZATION_SUMMARY.md  UNIFIED_API_IMPLEMENTATION.md  ai_assistant.db  demo.py  docker-compose.dev.yml  docker-entrypoint-dev.sh  docker-entrypoint.sh  hush.py  hush_cli.py  hush_start.py  install_unified_api.sh  pyproject.toml  requirements-dev.txt  requirements.txt  setup.cfg  test_complex_request.json  test_core.py  test_simple_request.json  test_ui.sh
.github/workflows/: ci-cd.yml  quality-gate.yml  release.yml  testing.yml
.qoder/quests/: cli-testing-and-packaging.md  functional-testing-and-dialog-verification.md  test-cli-configuration.md  uicliguicliclaude-codehelpexitbashzshfishshellguilm-studio.md
configs/: app.yaml  logging.yaml  unified_api.yaml
configs/environments/: development.yaml
core/: __init__.py
core/foundation/: cloud_client.py  dependencies.py  gpu_manager.py  grpc_client.py  intelligent_router.py  plugin_manager.py  unified_api_gateway.py
core/foundation/adapters/: base.py  claude_adapter.py  gemini_adapter.py
core/foundation/config/: auth.py  config.py  config_manager.py
core/inference/: __init__.py
core/inference/cloud/: __init__.py
core/inference/local/: __init__.py
core/shell/: __init__.py  cli_client.py  modern_cli.py  performance.py
core/shell/completion/: __init__.py
core/shell/display/: __init__.py  display_engine.py  streaming_display.py
core/shell/executor/: __init__.py  command.py  executor.py
core/shell/objects/: __init__.py  file_objects.py  system_objects.py
core/shell/parser/: __init__.py
cpp/: CMakeLists.txt  README.md  build_and_test.sh  integration_test.cpp
cpp/cmake/: CompilerOptimization.cmake  PlatformDetection.cmake  ThirdParty.cmake  platform_config.h.in
cpp/include/: async_scheduler.hpp  benchmark_framework.hpp  common.hpp  gpu_engine.hpp  grpc_server.hpp  memory_optimizer.hpp  model_cache.hpp  model_engine.hpp  optimized_model_engine.hpp  performance_analyzer.hpp  plugin_loader.hpp  sys_manager.hpp
cpp/include/nex/concepts/: core_concepts.hpp
cpp/include/nex/core/: async_types.hpp  grpc_service.hpp  inference_types.hpp  memory_manager.hpp  model_engine.hpp  model_engine_v2.hpp  scheduler.hpp
cpp/include/nex/platform/: linux_platform_adapter.hpp  macos_platform_adapter.hpp  platform_adapter.hpp  platform_detector.hpp  platform_factory.hpp  platform_factory_v2.hpp  unix_platform_adapter.hpp  windows_platform_adapter.hpp
cpp/include/nex/plugin/: plugin_base.hpp  plugin_system.hpp
cpp/include/nex/shell/: shell_command.hpp  shell_executor.hpp
cpp/include/nex/testing/: test_framework.hpp
cpp/src/: common.cpp  gpu_engine.cpp  grpc_server.cpp  main.cpp  memory_optimizer.cpp  model_engine.cpp  performance_analyzer.cpp  plugin_loader.cpp  sys_manager.cpp
cpp/src/core/memory/: memory_manager.cpp
cpp/src/core/platform/: platform_detector.cpp  platform_factory.cpp  unix_platform_adapter.cpp
cpp/src/core/shell/: shell_command.cpp
cpp/tests/core/: test_async_types.cpp
cpp/tests/platform/: test_platform_adapters.cpp
deployment/docker/: Dockerfile.dev  docker-compose.yml  docker-entrypoint-dev.sh  docker-entrypoint.sh
deployment/helm/templates/: _helpers.tpl  configmap.yaml  hpa.yaml  pvc.yaml  serviceaccount.yaml
deployment/k8s/: deploy.sh  dev-deployment.yaml  hpa.yaml  secrets.yaml
deployment/monitoring/alertmanager/: alertmanager.yml
docs/: DEVELOPER_GUIDE.md  MODERN_UI_GUIDE.md  PROJECT_COMPLETION_REPORT.md  PROJECT_SUMMARY.md  README.md  TESTING_GUIDE.md  UNIFIED_API_GUIDE.md  api.md  architecture.md  ci-cd-guide.md  cli-guide.md  deployment.md  faq.md  kubernetes.md  plugins.md  testing-guide.md
examples/: demo.py  test_gemini_secure.py  unified_api_demo.py
examples/legacy_tests/: test_chat_simple.py  test_cloud_integration.py  test_ollama.py
helm/: Chart.yaml  values.yaml
helm/templates/: deployment.yaml  ingress.yaml  networkpolicy.yaml  poddisruptionbudget.yaml  secret.yaml  service.yaml  servicemonitor.yaml
interfaces/: __init__.py
interfaces/cli/: __init__.py  cli_test.py
interfaces/sdk/: __init__.py  plugin_base.py
k8s/: configmap.yaml  deployment.yaml  ingress.yaml  namespace.yaml  pvc.yaml  rbac.yaml  service.yaml
monitoring/: docker-compose.yml
monitoring/loki/: loki.yml
monitoring/promtail/: promtail.yml
protos/: ai_assistant.proto  hushell_core.proto
python/: __init__.py  cache_optimizer.py  error_handler.py  main.py  performance_optimizer.py
python/agent/: api_router.py  orchestrator.py  unified_orchestrator.py  websocket_handler.py
python/core/: auth.py  cloud_client.py  dependencies.py  grpc_client.py  memory_manager.py  model_manager.py  ollama_client.py  plugin_manager.py
python/models/: schemas.py
scripts/: build.sh  deploy_performance_optimization.sh  monitoring.sh  release.sh  run_server.sh  run_tests.sh  verify_core.sh
services/: __init__.py
services/agent/: api_router.py  orchestrator.py  unified_orchestrator.py  websocket_handler.py
services/gateway/: unified_api_gateway.py
services/memory/: memory_manager.py
tests/: __init__.py  base.py  conftest.py  performance_integration_tests.cpp  test_basic.py  test_runner.py  test_unified_api.py  test_utils.py
tests/cli/: __init__.py  run_cli_tests.py
tests/e2e/: test_integration_flows.py
tests/fixtures/: sample_requests.json
tests/performance/: test_performance_suite.py
tests/unit/: cli_test_base.py  test_cli_commands.py  test_cli_performance.py  test_dialog_system.py  test_integration_flows.py  test_intelligent_routing.py  test_modern_shell.py  test_resource_management.py  test_runner.py  test_system_commands.py  verify_framework.py
ui/cli/: command_router.py  config.py  session_manager.py
ui/shared/: __init__.py  ai_client.py
(+68 files in other folders)
